--- a/orc8r/cloud/helm/orc8r/charts/metrics/templates/user-grafana.deployment.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/metrics/templates/user-grafana.deployment.yaml
@@ -114,4 +114,7 @@ data:
 
     [server]
     root_url = {{ .Values.userGrafana.rootURL }}
+
+    [database]
+    GF_DATABASE_URL = sqlite3:///var/lib/grafana/grafana.db?cache=private&mode=rwc&_journal_mode=WAL
 {{- end}}
