Add controller port

--- a/orc8r/cloud/helm/orc8r/vals-stage.yml
+++ b/orc8r/cloud/helm/orc8r/vals-stage.yml
@@ -130,13 +130,13 @@ nms:
       tag: "latest"
 
     env:
-      api_host: controller.sonarlte.com # orc8r proxy endpoint
+      api_host: controller.sonarlte.com:9443 # orc8r proxy endpoint
       mysql_host: orc8r-mariadbserver-03.mariadb.database.azure.com # MySQL host IP/Name
       mysql_user: magma_dev@orc8r-mariadbserver-03 # NMS Database user
       grafana_address: orc8r-user-grafana:3000
 
       # host: # Host to bind
-      # port: 3306 # Magmalte service port bind
+      # port: 9443 # 3306 # Magmalte service port bind
       # mapbox_access_token: # Mapbox Access token
       # mysql_db: orc8r-mariadbserver-03 # NMS Database name
       mysql_pass: Sonar_SFT_654321!! # NMS Database password
