update to pull policy

--- a/orc8r/cloud/helm/orc8r/vals-stage.yml
+++ b/orc8r/cloud/helm/orc8r/vals-stage.yml
@@ -128,6 +128,7 @@ nms:
     image:
       repository: sonarregistry.azurecr.io/magmalte_magmalte
       tag: "latest"
+      pullPolicy: Always
 
     env:
       api_host: controller.sonarlte.com:9443 # orc8r proxy endpoint
