--- a/orc8r/cloud/helm/orc8r/vals-stage.yml
+++ b/orc8r/cloud/helm/orc8r/vals-stage.yml
@@ -132,14 +132,18 @@ nms:
 
     env:
       api_host: controller.sonarlte.com # orc8r proxy endpoint
+      # mysql_host: nms-db.mysql.database.azure.com # MySQL host IP/Name
       mysql_host: orc8r-mariadbserver-03.mariadb.database.azure.com # MySQL host IP/Name
+      # mysql_user: magma_dev@nms-db # NMS Database user
       mysql_user: magma_dev@orc8r-mariadbserver-03 # NMS Database user
+      mysql_dialect: mariadb
       grafana_address: orc8r-user-grafana:3000
 
       # host: # Host to bind
       # port: 9443 # 3306 # Magmalte service port bind
       # mapbox_access_token: # Mapbox Access token
       # mysql_db: orc8r-mariadbserver-03 # NMS Database name
+      # mysql_pass: BlueChip!! # NMS Database password
       mysql_pass: Sonar_SFT_654321!! # NMS Database password
 
   nginx:
