--- a/orc8r/cloud/helm/orc8r/vals-stage.yml
+++ b/orc8r/cloud/helm/orc8r/vals-stage.yml
@@ -132,11 +132,11 @@ nms:
 
     env:
       api_host: controller.sonarlte.com # orc8r proxy endpoint
-      # mysql_host: nms-db.mysql.database.azure.com # MySQL host IP/Name
-      mysql_host: orc8r-mariadbserver-03.mariadb.database.azure.com # MySQL host IP/Name
-      # mysql_user: magma_dev@nms-db # NMS Database user
-      mysql_user: magma_dev@orc8r-mariadbserver-03 # NMS Database user
-      mysql_dialect: mariadb
+      mysql_host: nms-db.mysql.database.azure.com # MySQL host IP/Name
+      # mysql_host: orc8r-mariadbserver-03.mariadb.database.azure.com # MySQL host IP/Name
+      mysql_user: magma_dev@nms-db # NMS Database user
+      # mysql_user: magma_dev@orc8r-mariadbserver-03 # NMS Database user
+      mysql_dialect: mysql
       grafana_address: orc8r-user-grafana:3000
 
       # host: # Host to bind
