--- a/orc8r/cloud/deploy/azure/grafana-data-pvc.yaml
+++ b/orc8r/cloud/deploy/azure/grafana-data-pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: grafana-data-azurefile
+  name: grafana-data-azuredisk
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: azurefile-sc
+  storageClassName: azuredisk-sc
   resources:
     requests:
       storage: 2Gi
