--- a/orc8r/cloud/deploy/azure/grafana-providers-pvc.yaml
+++ b/orc8r/cloud/deploy/azure/grafana-providers-pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: grafana-providers-azurefile
+  name: grafana-providers-azuredisk
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: azurefile-sc
+  storageClassName: azuredisk-sc
   resources:
     requests:
       storage: 100M
