Updates to pvcs

--- a/orc8r/cloud/deploy/azure/azuredisk-sc.yaml
+++ b/orc8r/cloud/deploy/azure/azuredisk-sc.yaml
@@ -5,5 +5,5 @@ metadata:
 provisioner: kubernetes.io/azure-disk
 reclaimPolicy: Retain
 parameters:
-  storageaccounttype: Premium_LRS
+  storageaccounttype: Standard_LRS
   kind: Managed
