--- a/orc8r/cloud/deploy/azure/grafana-dashboards-pvc.yaml
+++ b/orc8r/cloud/deploy/azure/grafana-dashboards-pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: grafana-dashboards-azuredisk
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   storageClassName: azuredisk-sc
   resources:
     requests:
