--- a/orc8r/cloud/helm/orc8r/vals-stage.yml
+++ b/orc8r/cloud/helm/orc8r/vals-stage.yml
@@ -140,7 +140,7 @@ nms:
       # mysql_user: magma_dev@nms-db # NMS Database user
       # mysql_user: magma_dev@orc8r-mariadbserver-03 # NMS Database user
       # mysql_dialect: mysql
-      grafana_address: orc8r-user-grafana:3000
+      grafana_address: orc8r-user-grafana.magma-stage.svc.cluster.local:3000
 
       # host: # Host to bind
       # port: 9443 # 3306 # Magmalte service port bind
