--- a/orc8r/cloud/helm/orc8r/charts/secrets/secrets/configs/metricsd.yml
+++ b/orc8r/cloud/helm/orc8r/charts/secrets/secrets/configs/metricsd.yml
@@ -1,7 +1,7 @@
-alertmanagerApiURL: http://orc8r-alertmanager:9093/api/v2
-alertmanagerConfigServiceURL: http://orc8r-alertmanager-configurer:9101
+alertmanagerApiURL: http://orc8r-alertmanager:9093.magma-stage.svc.cluster.local/api/v2
+alertmanagerConfigServiceURL: http://orc8r-alertmanager-configurer.magma-stage.svc.cluster.local:9101
 profile": prometheus
-prometheusConfigServiceURL: http://orc8r-prometheus-configurer:9100
+prometheusConfigServiceURL: http://orc8r-prometheus-configurer.magma-stage.svc.cluster.local:9100
 prometheusPushAddresses:
-  - http://orc8r-prometheus-cache:9091/metrics
-prometheusQueryAddress: http://orc8r-prometheus:9090
+  - http://orc8r-prometheus-cache.magma-stage.svc.cluster.local:9091/metrics
+prometheusQueryAddress: http://orc8r-prometheus.magma-stage.svc.cluster.local:9090
