Udpates to URLs

--- a/orc8r/cloud/helm/orc8r/vals-stage.yml
+++ b/orc8r/cloud/helm/orc8r/vals-stage.yml
@@ -62,8 +62,8 @@ metrics:
   prometheus:
     create: true
     includeOrc8rAlerts: true
-    prometheusCacheHostname: orc8r-prometheus-cache
-    alertmanagerHostname: orc8r-alertmanager
+    prometheusCacheHostname: orc8r-prometheus-cache.magma-stage.svc.cluster.local
+    alertmanagerHostname: orc8r-alertmanager.magma-stage.svc.cluster.local
 
   alertmanager:
     create: true
@@ -73,14 +73,14 @@ metrics:
     image:
       repository: sonarregistry.azurecr.io/orc8r_prometheus-configurer
       tag: "latest"
-    prometheusURL: orc8r-prometheus:9090
+    prometheusURL: orc8r-prometheus.magma-stage.svc.cluster.local:9090
 
   alertmanagerConfigurer:
     create: true
     image:
       repository: sonarregistry.azurecr.io/orc8r_alertmanager-configurer
       tag: "latest"
-    alertmanagerURL: orc8r-alertmanager:9093
+    alertmanagerURL: orc8r-alertmanager.magma-stage.svc.cluster.local:9093
 
   prometheusCache:
     create: true
