--- a/symphony/app/fbcnms-projects/inventory/docker/nginx.conf
+++ b/symphony/app/fbcnms-projects/inventory/docker/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 8080;
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log debug;;
+    access_log /dev/stdout;
+    error_log /dev/stderr info;
     server_name _;
     root /var/www;
     index index.html;
