--- a/orc8r/cloud/docker/controller/supervisord.conf
+++ b/orc8r/cloud/docker/controller/supervisord.conf
@@ -109,7 +109,7 @@ stderr_events_enabled=true
 command=/usr/bin/envdir /var/opt/magma/envdir /var/opt/magma/bin/obsidian -logtostderr=true -v=0
 autorestart=true
 stdout_logfile=NONE
-stderr_logfile=NONE
+stderr_logfile=/var/logs/obsidian.log
 stdout_events_enabled=true
 stderr_events_enabled=true
 
