--- a/orc8r/cloud/deploy/azure/aks-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/aks-pipeline.yml
@@ -30,69 +30,162 @@
 #   vals.yml
 
 parameters:
-  - name: orc8rDbPassword
-    type: string
-    displayName: Orchestrator DB Password
-  - name: orc8rDbHost
-    type: string
-    displayName: Orchestrator DB Host
+  # - name: orc8rDbPassword
+  #   type: string
+  #   displayName: Orchestrator DB Password
+  # - name: orc8rDbHost
+  #   type: string
+  #   displayName: Orchestrator DB Host
+  - name: aksServiceConnection
+    displayName: "AKS Service Connection"
+  - name: aksNamespace
+    displayName: "AKS Namespace"
+  - name: helmValsFilepath
+    displayName: "Helm Values Filepath"
 
 steps:
 - checkout: self
   path: s
 - checkout: Overrides
   path: overrides
-- task: Bash@3
-  displayName: Setup secrets for Helm deployment
-  inputs:
-    targetType: 'inline' 
-    script: |
-      mkdir -p ~/secrets
-      cp -r $(Agent.BuildDirectory)/overrides/certs/ ~/secrets/certs/
-      ls ~/secrets/certs
+# - task: Bash@3
+#   displayName: Setup secrets for Helm deployment
+#   inputs:
+#     targetType: 'inline' 
+#     script: |
+#       mkdir -p ~/secrets
+#       cp -r $(Agent.BuildDirectory)/overrides/certs/ ~/secrets/certs/
+#       ls ~/secrets/certs
 
-      mkdir -p ~/secrets/envdir
-      echo "STREAMER,SUBSCRIBERDB,METRICSD,CERTIFIER,BOOTSTRAPPER,METERINGD_RECORDS,ACCESSD,OBSIDIAN,DISPATCHER,DIRECTORYD" > ~/secrets/envdir/CONTROLLER_SERVICES
-      echo "dbname=orc8r user=orc8r password=${{ parameters.orc8rDbPassword }} host=${{ parameters.orc8rDbHost }}" > ~/secrets/envdir/DATABASE_SOURCE
+#       mkdir -p ~/secrets/envdir
+#       echo "STREAMER,SUBSCRIBERDB,METRICSD,CERTIFIER,BOOTSTRAPPER,METERINGD_RECORDS,ACCESSD,OBSIDIAN,DISPATCHER,DIRECTORYD" > ~/secrets/envdir/CONTROLLER_SERVICES
+#       echo "dbname=orc8r user=orc8r password=${{ parameters.orc8rDbPassword }} host=${{ parameters.orc8rDbHost }}" > ~/secrets/envdir/DATABASE_SOURCE
       
-      mkdir -p ~/secrets/configs/orc8r
-      cp $(Agent.BuildDirectory)/overrides/configs/metricsd.yml ~/secrets/configs/orc8r/metricsd.yml
+#       mkdir -p ~/secrets/configs/orc8r
+#       cp $(Agent.BuildDirectory)/overrides/configs/metricsd.yml ~/secrets/configs/orc8r/metricsd.yml
 
-      cp -r ~/secrets $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/charts/secrets/.secrets
-- task: PythonScript@0
-  displayName: Configure vals.yml file with orc8r db host
-  inputs:
-    scriptSource: 'filePath'
-    scriptPath: 'orc8r/cloud/deploy/azure/scripts/generate-helm-values.py'
-    arguments: '-i $(Agent.BuildDirectory)/overrides/helm/vals.yml -o $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -p "controller.spec.database.host" -v ${{ parameters.orc8rDbHost }}'
-    workingDirectory: 'orc8r/cloud/deploy/azure/scripts'
-- task: PythonScript@0
-  displayName: Configure vals.yml file with orc8r db host
-  inputs:
-    scriptSource: 'filePath'
-    scriptPath: 'orc8r/cloud/deploy/azure/scripts/generate-helm-values.py'
-    arguments: '-i $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -o $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -p "controller.spec.database.pass" -v ${{ parameters.orc8rDbPassword }}'
-    workingDirectory: 'orc8r/cloud/deploy/azure/scripts'
+#       cp -r ~/secrets $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/charts/secrets/.secrets
+# - task: PythonScript@0
+#   displayName: Configure vals.yml file with orc8r db host
+#   inputs:
+#     scriptSource: 'filePath'
+#     scriptPath: 'orc8r/cloud/deploy/azure/scripts/generate-helm-values.py'
+#     arguments: '-i $(Agent.BuildDirectory)/overrides/helm/vals.yml -o $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -p "controller.spec.database.host" -v ${{ parameters.orc8rDbHost }}'
+#     workingDirectory: 'orc8r/cloud/deploy/azure/scripts'
+# - task: PythonScript@0
+#   displayName: Configure vals.yml file with orc8r db host
+#   inputs:
+#     scriptSource: 'filePath'
+#     scriptPath: 'orc8r/cloud/deploy/azure/scripts/generate-helm-values.py'
+#     arguments: '-i $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -o $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -p "controller.spec.database.pass" -v ${{ parameters.orc8rDbPassword }}'
+#     workingDirectory: 'orc8r/cloud/deploy/azure/scripts'
 
 # // TODO: Insert additional vals.yml replacements 
 
 - task: HelmInstaller@1
+  displayName: Install Helm
   inputs:
-    helmVersionToInstall: '3.1.0'
-# // TODO: Complete the following tasks to enable Helm deploy, including parameterization of AKS connections
-#
-# - task: HelmDeploy@0
-#   inputs:
-#     connectionType: 'Azure Resource Manager'
-#     azureSubscription: 'Alex - Subscription'
-#     azureResourceGroup: 'sonar'
-#     kubernetesCluster: 'alexsonar'
-#     namespace: 'magma-stage'
-#     command: 'upgrade'
-#     chartType: 'FilePath'
-#     chartPath: 'orc8r/cloud/helm/orc8r'
-#     releaseName: 'orc8r'
-#     valueFile: 'orc8r/cloud/helm/orc8r/vals.yml'
+    helmVersionToInstall: '3.2.4'
+- task: KubectlInstaller@0
+  displayName: Install Kubectl
+  inputs:
+    kubectlVersion: 'latest'
+- task: Kubernetes@1
+  displayName: Create Azure File Storage Class
+  inputs:
+    connectionType: 'Kubernetes Service Connection'
+    kubernetesServiceEndpoint: '${{ parameters.aksServiceConnection }}'
+    namespace: '${{ parameters.aksNamespace }}'
+    command: 'apply'
+    arguments: '-f orc8r/cloud/deploy/azure/azurefile-sc.yaml'
+    secretType: 'dockerRegistry'
+    containerRegistryType: 'Azure Container Registry'
+- task: Kubernetes@1
+  displayName: Create Azure Disk Storage Class
+  inputs:
+    connectionType: 'Kubernetes Service Connection'
+    kubernetesServiceEndpoint: '${{ parameters.aksServiceConnection }}'
+    namespace: '${{ parameters.aksNamespace }}'
+    command: 'apply'
+    arguments: '-f orc8r/cloud/deploy/azure/azuredisk-sc.yaml'
+    secretType: 'dockerRegistry'
+    containerRegistryType: 'Azure Container Registry'
+- task: KubernetesManifest@0
+  displayName: Create Prometheus Config Persistent Volume Claim
+  inputs:
+    action: 'deploy'
+    kubernetesServiceConnection: '${{ parameters.aksServiceConnection }}'
+    namespace: '${{ parameters.aksNamespace }}'
+    manifests: 'orc8r/cloud/deploy/azure/prometheus-cfg-pvc.yaml'
+- task: KubernetesManifest@0
+  displayName: Create Prometheus Data Persistent Volume Claim
+  inputs:
+    action: 'deploy'
+    kubernetesServiceConnection: '${{ parameters.aksServiceConnection }}'
+    namespace: '${{ parameters.aksNamespace }}'
+    manifests: 'orc8r/cloud/deploy/azure/prometheus-data-pvc.yaml'
+- task: KubernetesManifest@0
+  displayName: Create Grafana Dashboards Persistent Volume Claim
+  inputs:
+    action: 'deploy'
+    kubernetesServiceConnection: '${{ parameters.aksServiceConnection }}'
+    namespace: '${{ parameters.aksNamespace }}'
+    manifests: 'orc8r/cloud/deploy/azure/grafana-dashboards-pvc.yaml'
+- task: KubernetesManifest@0
+  displayName: Create Grafana Data Persistent Volume Claim
+  inputs:
+    action: 'deploy'
+    kubernetesServiceConnection: '${{ parameters.aksServiceConnection }}'
+    namespace: '${{ parameters.aksNamespace }}'
+    manifests: 'orc8r/cloud/deploy/azure/grafana-data-pvc.yaml'
+- task: KubernetesManifest@0
+  displayName: Create Grafana Datasources Persistent Volume Claim
+  inputs:
+    action: 'deploy'
+    kubernetesServiceConnection: '${{ parameters.aksServiceConnection }}'
+    namespace: '${{ parameters.aksNamespace }}'
+    manifests: 'orc8r/cloud/deploy/azure/grafana-datasources-pvc.yaml'
+- task: KubernetesManifest@0
+  displayName: Create Grafana Providers Persistent Volume Claim
+  inputs:
+    action: 'deploy'
+    kubernetesServiceConnection: '${{ parameters.aksServiceConnection }}'
+    namespace: '${{ parameters.aksNamespace }}'
+    manifests: 'orc8r/cloud/deploy/azure/grafana-providers-pvc.yaml'
+- task: KubernetesManifest@0
+  displayName: Create OpenVPN Persistent Volume Claim
+  inputs:
+    action: 'deploy'
+    kubernetesServiceConnection: '${{ parameters.aksServiceConnection }}'
+    namespace: '${{ parameters.aksNamespace }}'
+    manifests: 'orc8r/cloud/deploy/azure/openvpn-pvc.yaml'
+- task: AzureKeyVault@1
+  displayName: Connect to Key Vault
+  inputs:
+    azureSubscription: 'sonar-prod-magma'
+    KeyVaultName: 'sonar-prod-magma-01'
+    SecretsFilter: '*'
+    RunAsPreJob: true
+- task: AzureCLI@2
+  displayName: Retrieve Certificates
+  inputs:
+    azureSubscription: 'sonar-prod-magma'
+    scriptType: 'bash'
+    scriptLocation: 'scriptPath'
+    scriptPath: 'orc8r/cloud/deploy/azure/scripts/fetch_certs.sh'
+    arguments: '$(SSLKeyPassword) sonar-prod-magma-01'
+    failOnStandardError: false
+- task: HelmDeploy@0
+  displayName: Deploy Helm Charts
+  inputs:
+    connectionType: 'Kubernetes Service Connection'
+    kubernetesServiceConnection: '${{ parameters.aksServiceConnection }}'
+    namespace: '${{ parameters.aksNamespace }}'
+    command: 'upgrade'
+    chartType: 'FilePath'
+    chartPath: 'orc8r/cloud/helm/orc8r'
+    releaseName: 'orc8r'
+    valueFile: '${{ parameters.helmValsFilepath }}'
 
 # // TODO: Insert steps to retrieve admin_operator certificates from deployed controller containers
 # // TODO: Insert steps to update vals.yml to enable NMS deployment
