Update container-pipeline.yml for Azure Pipelines

--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -198,7 +198,7 @@ stages:
         runOnce:
           deploy:
             steps:
-            - checkout: self
+            # - checkout: self
             # - script: echo "Insert AKS Stage deploy..."
             - template: aks-pipeline.yml
               parameters:
