Remove overrides checkout

--- a/orc8r/cloud/deploy/azure/aks-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/aks-pipeline.yml
@@ -45,9 +45,9 @@ parameters:
 
 steps:
 - checkout: self
-  path: s
-- checkout: Overrides
-  path: overrides
+# path: s
+# - checkout: Overrides
+#   path: overrides
 # - task: Bash@3
 #   displayName: Setup secrets for Helm deployment
 #   inputs:
