--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -50,7 +50,7 @@ variables:
   - name: NMS_COMPOSE_PROJECT
     value: magmalte    
   - name: STAGE_BRANCH_PREFIX
-    value: azure-deployment
+    value: azure-deployment-pipeline-refactor
   - name: PROD_BRANCH
     value: azure-pipelines
 
