Updates to pipeline

--- a/orc8r/cloud/deploy/azure/aks-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/aks-pipeline.yml
@@ -9,12 +9,12 @@
 #
 # To support a model which incorporates the open source repo and a second repo for 
 # company-specific customizations, the calling pipeline requires the following:
-# resources:
-#   repositories:
-#   - repository: Overrides
-#     type: github
-#     endpoint: <DevOps Service Endpoint for GitHub repo>
-#     name: <Name of GitHub repo containing customizations>
+resources:
+  repositories:
+  - repository: magma_config
+    type: github
+    endpoint: SonarSoftwareInc
+    name: magma_config
 #
 # The structure of the company-specific repo should be the following:
 # /certs
@@ -42,12 +42,14 @@ parameters:
     displayName: "AKS Namespace"
   - name: helmValsFilepath
     displayName: "Helm Values Filepath"
+  - name: deployStage
+    displayName: "Deployment Stage"
 
 steps:
 - checkout: self
-# path: s
-# - checkout: Overrides
-#   path: overrides
+  path: s
+- checkout: magma_config
+  path: overrides
 # - task: Bash@3
 #   displayName: Setup secrets for Helm deployment
 #   inputs:
@@ -81,7 +83,41 @@ steps:
 #     workingDirectory: 'orc8r/cloud/deploy/azure/scripts'
 
 # // TODO: Insert additional vals.yml replacements 
-
+- task: AzureKeyVault@1
+  displayName: Connect to Key Vault
+  inputs:
+    azureSubscription: 'sonar-prod-magma'
+    KeyVaultName: 'sonar-prod-magma-01'
+    SecretsFilter: '*'
+    RunAsPreJob: true
+- task: PythonScript@0
+  displayName: Configure Helm values file with controller db user
+  inputs:
+    scriptSource: 'filePath'
+    scriptPath: 'orc8r/cloud/deploy/azure/scripts/update-helm-deploy-value.py'
+    arguments: '-i $(Agent.BuildDirectory)/overrides/vals-${{ parameters.deployStage }}.yml -o $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -p "controller.spec.database.user" -v $(ControllerDBUser)'
+    workingDirectory: 'orc8r/cloud/deploy/azure/scripts'
+- task: PythonScript@0
+  displayName: Configure Helm values file with controller db password
+  inputs:
+    scriptSource: 'filePath'
+    scriptPath: 'orc8r/cloud/deploy/azure/scripts/update-helm-deploy-value.py'
+    arguments: '-i $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -o $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -p "controller.spec.database.pass" -v $(ControllerDBPass)'
+    workingDirectory: 'orc8r/cloud/deploy/azure/scripts'
+- task: PythonScript@0
+  displayName: Configure Helm values file with MagmaLTE db user
+  inputs:
+    scriptSource: 'filePath'
+    scriptPath: 'orc8r/cloud/deploy/azure/scripts/update-helm-deploy-value.py'
+    arguments: '-i $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -o $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -p "controller.spec.database.user" -v $(MagmaLTEDBUser)'
+    workingDirectory: 'orc8r/cloud/deploy/azure/scripts'
+- task: PythonScript@0
+  displayName: Configure Helm values file with MagmaLTE db password
+  inputs:
+    scriptSource: 'filePath'
+    scriptPath: 'orc8r/cloud/deploy/azure/scripts/update-helm-deploy-value.py'
+    arguments: '-i $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -o $(Agent.BuildDirectory)/s/orc8r/cloud/helm/orc8r/vals.yml -p "controller.spec.database.pass" -v $(MagmaLTEDBPass)'
+    workingDirectory: 'orc8r/cloud/deploy/azure/scripts'
 - task: HelmInstaller@1
   displayName: Install Helm
   inputs:
@@ -159,13 +195,6 @@ steps:
     kubernetesServiceConnection: '${{ parameters.aksServiceConnection }}'
     namespace: '${{ parameters.aksNamespace }}'
     manifests: 'orc8r/cloud/deploy/azure/openvpn-pvc.yaml'
-- task: AzureKeyVault@1
-  displayName: Connect to Key Vault
-  inputs:
-    azureSubscription: 'sonar-prod-magma'
-    KeyVaultName: 'sonar-prod-magma-01'
-    SecretsFilter: '*'
-    RunAsPreJob: true
 - task: AzureCLI@2
   displayName: Retrieve Certificates
   inputs:
