Added deployment stage parameter value

--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -203,6 +203,7 @@ stages:
                   aksServiceConnection: ${{ parameters.aksServiceConnection }}
                   aksNamespace: ${{ parameters.aksNamespace }}
                   helmValsFilepath: ${{ parameters.helmValsFilepath }}
+                  deploymentStage: stage
             
 
 - stage: Prod_Deploy
