Update to pipeline

--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -37,6 +37,13 @@ parameters:
     type: string
     default: sonar-prod-magma-aks
 
+resources:
+  repositories:
+  - repository: SonarSoftwareInc/magma_config
+    type: github
+    endpoint: SonarSoftwareInc
+    name: magma_config
+    
 trigger:
 - master
 
