Udpate to the pipeline

--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -42,7 +42,7 @@ resources:
   - repository: magma_config
     type: github
     endpoint: SonarSoftwareInc
-    name: magma_config
+    name: SonarSoftwareInc/magma_config
 
 trigger:
 - master
