--- a/orc8r/cloud/deploy/azure/aks-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/aks-pipeline.yml
@@ -95,8 +95,7 @@ steps:
   displayName: Install pyyaml
   inputs:
     script: |
-      sudo easy_install pip
-      sudo python -m pip install pyyaml
+      sudo python3 -m pip install pyyaml
     failOnStderr: true
 - task: PythonScript@0
   displayName: Configure Helm values file with controller db user
