--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -37,6 +37,7 @@ parameters:
     type: string
     default: sonar-prod-magma-aks
   - name: keyVaultName
+    displayName: Key Vault Name
     type: string
     default: sonar-prod-magma-01
 
@@ -212,12 +213,12 @@ stages:
                 path: overrides
               - template: aks-pipeline.yml
                 parameters:
-                  aksServiceConnection: ${{ parameters.aksServiceConnection }}
-                  aksNamespace: ${{ parameters.aksNamespace }}
-                  helmValsFilepath: ${{ parameters.helmValsFilepath }}
+                  # aksServiceConnection: ${{ parameters.aksServiceConnection }}
+                  # aksNamespace: ${{ parameters.aksNamespace }}
+                  # helmValsFilepath: ${{ parameters.helmValsFilepath }}
                   deploymentStage: stage
-                  azureServiceConnection: ${{ parameters.acrServiceConnection }}
-                  keyVaultName: ${{ parameters.keyVaultName }}
+                  # azureServiceConnection: ${{ parameters.acrServiceConnection }}
+                  # keyVaultName: ${{ parameters.keyVaultName }}
             
 
 - stage: Prod_Deploy
