Parameterized config repo values

--- a/orc8r/cloud/deploy/azure/container-pipeline.yml
+++ b/orc8r/cloud/deploy/azure/container-pipeline.yml
@@ -40,13 +40,21 @@ parameters:
     displayName: Key Vault Name
     type: string
     default: sonar-prod-magma-01
+  - name: magmaConfigRepo
+    displayName: Magma Config Repository
+    type: string
+    default: SonarSoftwareInc/magma_config
+  - name: magmaConfigServiceConnection
+    displayName: Magma Config Service Connection
+    type: string
+    default: SonarSoftwareInc
 
 resources:
   repositories:
   - repository: magma_config
     type: github
-    endpoint: SonarSoftwareInc
-    name: SonarSoftwareInc/magma_config
+    endpoint: ${{ parameters.magmaConfigServiceConnection }}
+    name: ${{ parameters.magmaConfigRepo }}
 
 trigger:
 - master
