--- a/orc8r/cloud/helm/orc8r/karam.yaml
+++ b/orc8r/cloud/helm/orc8r/karam.yaml
@@ -21,13 +21,13 @@ proxy:
     legacyEnabled: true
     extraAnnotations:
       bootstrapLagacy:
-        external-dns.alpha.kubernetes.io/hostname: bootstrapper-controller.karamcom
+        external-dns.alpha.kubernetes.io/hostname: bootstrapper-controller.karam.com
       clientcertLegacy:
-        external-dns.alpha.kubernetes.io/hostname: controller.karamcom,api.karamcom
+        external-dns.alpha.kubernetes.io/hostname: controller.karam.com,api.karam.com
     name: orc8r-bootstrap-legacy
     type: LoadBalancer
   spec:
-    hostname: controller.karamcom
+    hostname: controller.karam.com
     http_proxy_docker_hostname: "orc8r-proxy"
 
 controller:
@@ -148,7 +148,7 @@ nms:
     service:
       type: LoadBalancer
       annotations:
-        external-dns.alpha.kubernetes.io/hostname: "*.nms.karamcom"
+        external-dns.alpha.kubernetes.io/hostname: "*.nms.karam.com"
 
     deployment:
       spec:
