--- a/orc8r/cloud/helm/karam.yaml
+++ b/orc8r/cloud/helm/karam.yaml
@@ -111,7 +111,7 @@ metrics:
           claimName: grafana-data-azuredisk
 
 nms:
-  enabled: true
+  enabled: false
 
   imagePullSecrets: Nd3LYEjNiKfMlVWbYrDEQ/dY8901hzuO
 
